liblangtag: Autospec creation for update from version 0.6.3 to version 0.6.4
Akira TAGOH (5):
      Replace the word of 'master' to 'primary'
      trivial update
      Stop shipping ChangeLog
      Fix build issue for docs
      Bump the version to 0.6.4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+0.6.3 -> 0.6.4
+=================
+Akira TAGOH (4):
+      Replace the word of 'master' to 'primary'
+      trivial update
+      Stop shipping ChangeLog
+      Fix build issue for docs
+
 0.6.2 -> 0.6.3
 =================
 Akira TAGOH (3):
