--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.6.6 -> 0.6.7
+=================
+Akira TAGOH (1):
+      Add missing header
+
 0.6.5 -> 0.6.6
 =================
 Akira TAGOH (2):
